--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
 
 <p>This is a test</p>
 
+<div class=wsd wsd_style="modern-blue" ><pre>
+
+Alice->Bob: Authentication Request
+Bob-->Alice: Authentication Response
+
+</pre></div><script type="text/javascript" src="http://www.websequencediagrams.com/service.js"></script>
+
 <pre><code>title Challenge a named auth type
 
 A-&gt;+B: next(env)
